Aggiorno .gitignore con il mio .iml

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ buildNumber.properties
 #Custom ignore
 .idea/
 ingsw201902.iml
+ing-sw-2019-02.iml
 
 #Con **.mp3 ignoro tutti i file di tipo mp3
 src/.DS_Store
