--- a/pom.xml
+++ b/pom.xml
@@ -49,13 +49,9 @@
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>11</version>
+            <artifactId>javafx</artifactId>
+            <version>13-ea+8</version>
+            <type>pom</type>
         </dependency>
     </dependencies>
 
