--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.2</version>
                 <configuration>
-                    <mainClass>client.GUI.Bind</mainClass>
+                    <mainClass>client.GUI.ImageViewer</mainClass>
                 </configuration>
             </plugin>
 
