--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,6 @@ ing-sw-2019-02.iml
 #Con **.mp3 ignoro tutti i file di tipo mp3
 src/.DS_Store
 src/main/.DS_Store
-.DS_Store
+.settings/
 
 appunti/
