Porta resa valore caricabile da file di properties

--- a/src/main/resources/adrenaline.properties
+++ b/src/main/resources/adrenaline.properties
@@ -3,3 +3,7 @@
 #Timer Durations in milliseconds
 lobbyDuration=2000
 turnDuration=1000000
+
+#Network properties
+defaultSocketPort=1337
+defaultRMIPort=1338
