--- a/src/main/resources/adrenaline.properties
+++ b/src/main/resources/adrenaline.properties
@@ -2,7 +2,7 @@
 
 #Timer Durations in milliseconds
 lobbyDuration=2000
-turnDuration=1000000
+turnDuration=60000
 
 #Network properties
 defaultSocketPort=1337
