--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>12</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>12</version>
+            <!--scope>provided</scope -->
         </dependency>
     </dependencies>
 
