--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>12</version>
-            <!--scope>provided</scope -->
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
